--- a/line1.html
+++ b/line1.html
@@ -77,6 +77,14 @@
                                 <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="9000" class="inp item" id="N_3" data-counter>
                             </div>
                         </div>
+                        <div class="input-block-wrapper">
+                            <div class="input-block-wrapper-title">
+                                <p class="txt">Время демонтажа шпули из-под буфера и монтажа нового буфера со склейкой, мин</p>
+                            </div>
+                            <div class="input-block-wrapper-work-area">
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="9000" class="inp item" id="T_13" data-counter>
+                            </div>
+                        </div>
                     </div>
                     <div class="wrapper-input-block">
                         <div class="input-block-wrapper">
@@ -125,6 +133,14 @@
                             </div>
                             <div class="input-block-wrapper-work-area">
                                 <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="50" class="inp" id="V_1" data-counter>
+                            </div>
+                        </div>
+                        <div class="input-block-wrapper">
+                            <div class="input-block-wrapper-title">
+                                <p class="txt">Намотка буферного материала, пог.м</p>
+                            </div>
+                            <div class="input-block-wrapper-work-area">
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="50" class="inp" id="N_5" data-counter>
                             </div>
                         </div>
                     </div>
@@ -177,7 +193,14 @@
                                 <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="60" class="inp" id="T_9" data-counter>
                             </div>
                         </div>
-
+                        <div class="input-block-wrapper">
+                            <div class="input-block-wrapper-title">
+                                <p class="txt">Время демонтажа буферного материала после полива, мин</p>
+                            </div>
+                            <div class="input-block-wrapper-work-area">
+                                <input type="text" onkeyup="this.value = this.value.replace(/[^\d]/g,'');" value="60" class="inp" id="T_14" data-counter>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- End input data -->
