--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                             <p class="result-title" id="P">0</p>
                         </div>
                     </div>
-                    <button class="wrapper-result-block-btn" id="wrBtn" onclick="generatePDF()">Выгрузить pdf-файл</button>
+                    <!-- <button class="wrapper-result-block-btn" id="wrBtn" onclick="generatePDF()">Выгрузить pdf-файл</button> -->
                 </div>
             </div>
             <!-- End result blocks -->
