--- a/line1.html
+++ b/line1.html
@@ -250,7 +250,7 @@
                                 <p class="result-title" id="P_1">0</p>
                             </div>
                         </div>
-                        <button class="wrapper-result-block-btn" id="wrBtn" onclick="toPDF()">Выгрузить pdf-файл</button>
+                        <!-- <button class="wrapper-result-block-btn" id="wrBtn" onclick="toPDF()">Выгрузить pdf-файл</button> -->
                     </div>
                 </div>
                 <!-- End result blocks -->
