add save pdf and jQuery

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
                         </div>
                     </div>
                     <!-- <button class="wrapper-result-block-btn" id="wrBtn" onclick="generatePDF()">Выгрузить pdf-файл</button> -->
+                    <button class="wrapper-result-block-btn" id="wrBtn">Выгрузить pdf-файл</button>
                 </div>
             </div>
             <!-- End result blocks -->
@@ -243,6 +244,8 @@
     <!-- End footer blocks -->
 
 </body>
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="js/html2pdf.bundle.min.js"></script>
 <script src="js/main.js"></script>
 
