--- a/line1.html
+++ b/line1.html
@@ -251,6 +251,7 @@
                             </div>
                         </div>
                         <!-- <button class="wrapper-result-block-btn" id="wrBtn" onclick="toPDF()">Выгрузить pdf-файл</button> -->
+                        <button class="wrapper-result-block-btn" id="wrBtn">Выгрузить pdf-файл</button>
                     </div>
                 </div>
                 <!-- End result blocks -->
@@ -266,6 +267,7 @@
         <!-- End footer blocks -->
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="js/html2pdf.bundle.min.js"></script>
 <script src="js/main.js"></script>
 
